2008-02-7 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Removed internal asin tables as asin is now calculated from 
	  acos tables.
	- Misc. updates for shapes docs.


2008-02-06 Till Tantau <tantau@users.sourceforge.net>

	- Changed fit library, so that nodes are now "completely"
	  fitted. 
	- Changed tutorial so that fit library is now used.
	- Added placement library and documentation.

2008-02-05 Till Tantau <tantau@users.sourceforge.net>

	- Fixes in snake compatibility code.
	- Added dvipdfmx support (identical to dvipdfm).
	- Fixed missing braces and color stack problem in
	  shapes.logic.IEC. 

2008-02-04 Till Tantau <tantau@users.sourceforge.net>

	- Patched (and hopefully fixed) hyperref support.
	- Made matrix inversion more precise.
	- Added tutorial for geometric constructions.
	- Fixed partway and intersection computations.
	- Added line to circle intersection.

2008-02-03 Till Tantau <tantau@users.sourceforge.net>
	
	- Added through library (still very simple...).
	- Added computation of intersection of circles and tangent to
	  a circle.

2008-01-31 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Updated isosceles triangle shape. Positioning of node
	  contents improved. Added key so minimum width and height
	  can be applied independently
	- Fix for trapezium shape for minimum height. This fix may
	  ``break'' exisiting code by making any trapezium enlarged using
	  minimum height to appear slightly wider than before. But...
	- Added keys for trapezium so that minimum width and height
	  can be applied independently, or to just the `body' of the
	  trapezium. 

2008-01-30 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Reimplemented shape `tape'. Anchors should behave a bit
	  better now.

2008-01-29 Till Tantau <tantau@users.sourceforge.net>

	- Fixed problem with pin a relative coordinates.

2008-01-27 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Added `logic gate IEC symbol color` key to change color