@@ -105,6 +105,7 @@
 {
   \parindent0pt
   \null
+  \colorlet{mintgreen}{green!50!black!50}
   
   \thispagestyle{empty}
   \vskip3cm
@@ -131,7 +132,7 @@
     \def\nodeshadowed[#1]#2;{\node[scale=2,above,#1]{#2};\node[scale=2,above,#1,yscale=-1,scope fading=south,opacity=0.4]{#2};}
 
     \nodeshadowed [at={(-5,5  )},yslant=0.05] {\Huge Ti\textcolor{orange}{\emph{k}}Z};
-    \nodeshadowed [at={( 0,5.3)}] {\huge \textcolor{green!50!black!50}{\&}};
+    \nodeshadowed [at={( 0,5.3)}] {\huge \textcolor{mintgreen}{\&}};
     \nodeshadowed [at={( 5,5  )},yslant=-0.05] {\Huge \textsc{PGF}};
     \nodeshadowed [at={( 0,2  )}] {Manual for Version \pgftypesetversion};
 
