@@ -8,9 +8,9 @@
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
 
-% Nothing to be done...
-
 \usepackage[dvipdfm]{graphics}
 % This will tell everyone which driver we are using.
 
-% Make sure to compile this using elatex + dvipdfm.
+\usepackage[dvipdfm]{hyperref}
+
+% Make sure to compile this using latex + dvipdfm.
