@@ -7,7 +7,7 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesPackageRCS[v\pgfversion] $Header: /cvsroot/pgf/pgf/generic/pgf/systemlayer/pgfsys.code.tex,v 1.29 2007/12/12 16:57:17 tantau Exp $
+\ProvidesPackageRCS[v\pgfversion] $Header: /cvsroot/pgf/pgf/generic/pgf/systemlayer/pgfsys.code.tex,v 1.30 2008/01/13 15:30:04 tantau Exp $
 
 
 % Load key mechanism
@@ -93,7 +93,7 @@
   \else%
     \expandafter\global\expandafter\let\csname pgf@sys@fail@#1\endcsname=\pgfutil@empty%
     \PackageWarning{pgf}{%
-      Your graphic driver \pgfsysdriver\space does not supported #1. This warning is given only once}%
+      Your graphic driver \pgfsysdriver\space does not support #1. This warning is given only once}%
   \fi%
 }
 
